Require JDK 11 and support JDK 21 at build time